# XH-agent-drama

./: .gitignore  README.md  start.bat  参考.txt
backend/: .env.example  requirements.txt  run.bat  run.sh  test_llm_model.py
backend/alembic/: env.py
backend/app/: main.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
seedance-2.0-main/: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  SKILL.md  V6_SEQUENCE_PROMPT_COMPILER_MANIFEST.md
seedance-2.0-main/.github/: CODEOWNERS
seedance-2.0-main/agents/: openai.yaml
文旅宣传片skills/: README.md  config.example.yaml  pyproject.toml
文旅宣传片skills/examples/: README.md  full_script_归.md  inspiration_皖南古村.txt
文旅宣传片skills/src/cultural_film_prompts/: __init__.py  cli.py  config.py  pipeline.py
文旅宣传片skills/src/cultural_film_prompts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
文旅宣传片skills/src/cultural_film_prompts/io/: __init__.py  input_parser.py  output_writer.py
文旅宣传片skills/src/cultural_film_prompts/llm/: __init__.py  client.py
文旅宣传片skills/src/cultural_film_prompts/models/: __init__.py  director_notes.py  final_package.py  screenplay.py  shot_prompts.py  video_prompts.py
文旅宣传片skills/src/cultural_film_prompts/prompts/: director.md  screenwriter.md  videographer.md
文旅宣传片skills/src/cultural_film_prompts/roles/: __init__.py  director.py  screenwriter.py  storyboard.py  videographer.py
文旅宣传片skills/tests/: test_pipeline.py
短剧分镜工业化提示词/: README.md  SKILL.md
(+458 files in other folders)
